--- a/resources/style.css
+++ b/resources/style.css
@@ -1,1 +1,19 @@
+body {
+  text-align: center;
+  font-family: Helvetica;
+}
 
+#title {
+  color: white;
+  background-image: url(https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/mocks/broadway.png);
+}
+
+ {
+  font-size: 70px;
+  font-weight: bold;
+}
+
+.designed {
+  color: white;
+  background-image: url(https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/mocks/broadway.png);
+}
